syntax = "proto3";

package user;
option go_package = "https://github.com/grozaqueen/julse/api/protos/user/gen";

message UsersSignUpRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string repeat_password = 4;
}